<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        android:id="@+id/menu_menu"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/menu_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dip"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/menu_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/menu_name" />

            <TextView
                android:id="@+id/menu_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@id/menu_description" />

            <LinearLayout
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/menu_icon_beef"
                    android:contentDescription="@string/beef"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/cow_100"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:tint="@color/colorPrimaryDark"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/menu_icon_pork"
                    android:contentDescription="@string/pork"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/pig_100"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:tint="@color/colorPrimaryDark"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/menu_icon_venison"
                    android:contentDescription="@string/venison"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/deer_100"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:tint="@color/colorPrimaryDark"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/menu_icon_lamb"
                    android:contentDescription="@string/lamb"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/sheep_100"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:tint="@color/colorPrimaryDark"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/menu_icon_poultry"
                    android:contentDescription="@string/poultry"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/chicken_100"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:tint="@color/colorPrimaryDark"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/menu_icon_fish"
                    android:contentDescription="@string/fish"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/fish_100"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:tint="@color/colorPrimaryDark"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/menu_icon_seafood"
                    android:contentDescription="@string/seafood"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/prawn_100"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:tint="@color/colorPrimaryDark"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/menu_icon_vegetarian"
                    android:contentDescription="@string/vegetarian"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/vegetarianfood_100"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:tint="@color/colorPrimaryDark"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/menu_icon_vegan"
                    android:contentDescription="@string/vegan"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/naturalfood_100"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:tint="@color/colorPrimaryDark"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/menu_icon_homemade"
                    android:contentDescription="@string/homemade"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/home_100"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:tint="@color/colorPrimaryDark"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/menu_icon_allergen"
                    android:contentDescription="@string/allergen"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_alert_black_24dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:tint="@color/attention"
                    android:visibility="gone" />
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
